<resources>
    <string name="app_name">FitGo</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_confirm_password">Confirmar Contraseña</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_reset_password">Reestablecer Contraseña</string>
    <string name="login_sign_in_google">Sign In With Google</string>
    <string name="login_forgot_password">Olvidé mi contraseña</string>
    <string name="login_create_account">Crear una cuenta</string>
    <string name="login_go_login">Volver al Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rutinas">Rutinas</string>
    <string name="mis_rutinas">Mis Rutinas</string>
    <string name="title_activity_maps">Map</string>


</resources>
